objects/User_order__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Ref_Id__c</fullName>
        <label>Other Ref Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Responce__c</fullName>
        <label>Payment Responce</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_ID__c</fullName>
        <label>Payment Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User_order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UO-{0000000}</displayFormat>
        <label>User_order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>